# bp-be

./: .gitignore  Dockerfile  GOOGLE_ONE_TAP_API.md  MIGRATION_DEPLOYMENT.md  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  requirements.txt
.github/: BRANCH_STRATEGY.md  SECRETS.md
.github/workflows/: deploy-app-beta.yml  deploy-app-dev.yml  deploy-app-production.yml  deploy-app-qa.yml  deploy-beta.yml  deploy-dev.yml  deploy-production.yml  deploy-qa.yml  deploy-template.yml
alembic/: env.py
alembic/versions/: 001_create_all_tables.py  001_initial_schema_postgresql.py  002_seed_blue_pansy_products.py  002_seed_products_postgresql.py  009aad9c6997_fix_social_accounts_schema.py  0cd17a4957d2_add_shipping_id_admin_notes_spam_order_.py  1948e05cb5ad_consolidated_schema.py  4956f5696604_add_addresses_table.py  5c30e340509a_add_display_picture_to_users.py  5ef2da36f341_add_user_type_field_to_users.py  a7672856e3d4_merge_heads.py  aa3fb43c50a6_add_user_type_to_users.py  ac23ec0fc384_add_phone_field_to_users.py  aca13565e8f0_add_user_role_field.py  create_addresses_table_complete.py  e1277fdd82fa_add_cart_state_field.py  ecd4aceea683_add_address_id_and_cart_id_to_orders.py
app/: __init__.py  main.py
app/controllers/: __init__.py  address_controller.py  admin_controller.py  auth_controller.py  cart_controller.py  checkout_controller.py  oauth_controller.py  product_controller.py  router.py  wishlist_controller.py
app/core/: admin_dependencies.py  config.py  db.py  dependencies.py  errors.py  logging.py  oauth_storage.py  security.py
app/data/: __init__.py  seed_products.py
app/middleware/: __init__.py  auth_context.py  cors.py  request_id.py
app/models/: __init__.py  address.py  base.py  cart.py  order.py  payment.py  product.py  social_account.py  user.py  wishlist.py
app/providers/: __init__.py
app/repositories/: address_repository.py  cart_repository.py  order_repository.py  payment_repository.py  product_repository.py  social_repository.py  user_repository.py  wishlist_repository.py
app/schemas/: __init__.py  address.py  admin.py  auth.py  cart.py  common.py  order.py  payment.py  product.py  user.py  wishlist.py
app/services/: __init__.py  address_service.py  admin_service.py  auth_service.py  cart_service.py  order_service.py  product_service.py  wishlist_service.py
app/utils/: hashing.py  id.py  pagination.py  validation.py
infrastructure/: README.md  app.py  app_minimal.py  cdk.context.json  cdk.json  deploy.py  deploy_direct.py  test_simple.py
scripts/: reset_and_migrate.sh  seed_products.py  setup-parameter-store.sh  startup.sh
terraform/: README.md  build-lambda.sh  deploy-beta.sh  deploy-dev.sh  deploy-prod.sh  deploy-qa.sh  validate-infrastructure.sh
(+39 files in other folders)
